Fixed masthead spacing inconsistencies.

--- a/app/assets/stylesheets/components/big-masthead.scss
+++ b/app/assets/stylesheets/components/big-masthead.scss
@@ -173,7 +173,8 @@
 		}
 		@include bp(l) {
 			position: relative;
-	    margin: 40px auto 0 auto;
+	    //margin: 40px auto 0 auto;
+      margin: 0 auto 0 auto;
 		}
 	}
   // .masthead {
@@ -241,7 +242,7 @@
   .brandedMastheadContainer {
     max-width: 1128px;
     max-height: 220px;
-    overflow: visible !important;
+    //overflow: visible !important;
     margin: 0 auto;
     position: relative;
     z-index: 100;
@@ -258,7 +259,7 @@
       > img {
         max-height: 220px;
         width: 100%;
-        bottom: 20px;
+        //bottom: 20px;
         @include bp(l) {
           max-height: 220px;
           width: 1128px;
